<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/billListItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/groceries"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/billAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bill_amount_100"
        app:layout_constraintStart_toStartOf="@+id/billListItemTitle"
        app:layout_constraintTop_toBottomOf="@+id/billListItemTitle" />

    <TextView
        android:id="@+id/billDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/discount_15_15"
        app:layout_constraintStart_toStartOf="@+id/billAmount"
        app:layout_constraintTop_toBottomOf="@+id/billAmount" />

    <TextView
        android:id="@+id/billTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/total_bill_85_00"
        app:layout_constraintStart_toStartOf="@+id/billDiscount"
        app:layout_constraintTop_toBottomOf="@+id/billDiscount" />

    <TextView
        android:id="@+id/billDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_06_08_2024"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/billTotal"
        app:layout_constraintTop_toBottomOf="@+id/billTotal" />

    <TextView
        android:id="@+id/billCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/food"
        app:layout_constraintBottom_toBottomOf="@+id/billDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/billDate" />
</androidx.constraintlayout.widget.ConstraintLayout>