<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:padding="10dp"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".SelectSortFragment">

    <ImageView
        android:id="@+id/imageViewCategoryDesc"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_desc_sort"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDiscountDesc"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDiscountAsc" />

    <ImageView
        android:id="@+id/imageViewCategoryAsc"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_asc_sort"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDiscountAsc"
        app:layout_constraintTop_toTopOf="@+id/imageViewCategoryDesc" />

    <TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/select_sort_label"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_txt_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewDate_Asc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewDate_Asc" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount_percent_txt_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewDiscountAsc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewDiscountAsc" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_txt_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewCategoryAsc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewCategoryAsc" />

    <ImageView
        android:id="@+id/imageViewDate_Asc"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_asc_sort"
        app:layout_constraintEnd_toStartOf="@+id/imageViewDateDesc"
        app:layout_constraintTop_toTopOf="@+id/imageViewDateDesc" />

    <ImageView
        android:id="@+id/imageViewDateDesc"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_desc_sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageViewDiscountAsc"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_asc_sort"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDate_Asc"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDate_Asc" />

    <ImageView
        android:id="@+id/imageViewDiscountDesc"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_desc_sort"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDateDesc"
        app:layout_constraintTop_toTopOf="@+id/imageViewDiscountAsc" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>